# pynamodb-fastapi

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  code_quality_check.yml  frontend.yml
backend/: .env.development  Dockerfile  Pipfile  setup.cfg
backend/.aws/: config  credentials
backend/api/: app.py
backend/api/crud/: __init__.py  history.py
backend/api/models/: History.py  Tsundoku.py  Users.py  __init__.py
backend/api/routers/: __init__.py  history.py  tsundoku.py  users.py
backend/api/schemas/: Book.py  History.py  Tsundoku.py  User.py  __init__.py
backend/api/settings/: config.py
backend/db/: create_db.py  insert_random_record.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
