[flake8]
ignore = D203,W605,E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env
max-complexity = 10
max-line-length = 99

[black]
max-line-length = 99

[isort]
profile = black

[mypy]
ignore_missing_imports = True

[metadata]
name = api
version = 0.1.0

[options]
packages = find:
